# cardio-trace-sensor-hub

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  current_issues.md  docker-compose.dev.yml  entrypoint.sh  pyproject.toml
data/: rr_config.json  rr_records.db
payloads/: apple.json  ehr.json  garmin.json
src/app/: backend_api_client.py  config.py  deps.py  error_handlers.py  exceptions.py  main.py  metrics.py  models.py  mqtt_ingress.py  pipeline.py  routes.py  schemas.py  sensor_hub.py
src/app/parsers/: __init__.py  apple.py  ehr.py  frame_parsers.py  garmin.py  types.py
src/app/pipeline_steps/: __init__.py  backend_identification.py  base.py  device_discovery.py  save_record.py  tenant_identification.py
tests/: __init__.py  conftest.py  helpers.py  test_config.py  test_frame_parsers.py  test_mqtt_ingress.py  test_pipeline.py  test_sensor_hub.py
