[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cardio-trace-sensor-hub"
version = "0.1.0"
description = "MQTT ingress and forwarding for Cardio Trace devices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomqtt>=2.5.1",
    "fastapi[standard]>=0.135.2",
    "httpx>=0.28.1",
    "prometheus-client>=0.23.1",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
